Fix Safari shift

--- a/extensions/amp-story-interactive/0.1/amp-story-interactive-img-quiz.css
+++ b/extensions/amp-story-interactive/0.1/amp-story-interactive-img-quiz.css
@@ -45,6 +45,7 @@
   height: 100% !important;
   border-radius: 50% !important;
   position: absolute !important;
+  left: 0 !important;
 }
 
 .i-amphtml-story-interactive-img-option[correct='correct'] {
